test/syc/bad/unsignedvalist.c
/*
 * Both unsigned and __va_list specifier
 */

unsigned __va_list *a;
